# ServerlessLLM-NPU

./: README.md
sllm_store/: CMakeLists.txt  requirements.txt  setup.py
sllm_store/csrc/checkpoint/: checkpoint.cpp  checkpoint.h  checkpoint_py.cpp
sllm_store/csrc/sllm_store/: cann_error_handling.h  cann_ipc.cpp  cann_ipc.h  cann_memory.cpp  cann_memory.h  cann_memory_pool.cpp  cann_memory_pool.h  checkpoint_store.cpp  checkpoint_store.h  model.cpp  pinned_memory_pool.cpp  types_and_defs.h
sllm_store/sllm_store/: cann_utils.py  torch.py  transformers.py
sllm_store/tests/cpp/: CMakeLists.txt
sllm_store/tests/python/: test_cann_basic.py  test_cann_server.py
